--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <h1>About Jennie</h1>
   <nav>
     <ul>
-      <li><a href="home.html">home</a></li>
+      <li><a href="index.html">home</a></li>
       <li><a href="about.html">about</a></li>
       <li><a href="project.html">projects</a></li>
       <li><a href="blog.html">blog</a></li>
